--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,11 @@
   		<artifactId>spring-webmvc</artifactId>
   		<version>3.0.1.RELEASE</version>
   	</dependency>
+  	<dependency>
+  		<groupId>mysql</groupId>
+  		<artifactId>mysql-connector-java</artifactId>
+  		<version>5.1.12</version>
+  	</dependency>
   	
   </dependencies>
 </project>
