--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,11 @@
   		<artifactId>mysql-connector-java</artifactId>
   		<version>5.1.12</version>
   	</dependency>
+  	<dependency>
+  		<groupId>junit</groupId>
+  		<artifactId>junit</artifactId>
+  		<version>4.8.1</version>
+  	</dependency>
   	
   </dependencies>
 </project>
