--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -21,10 +21,40 @@
 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
+	
+		
+	<filter> 
+		<filter-name>springSecurityFilterChain</filter-name> 
+		<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+	</filter> 
+	
+	<filter-mapping>
+		<filter-name>springSecurityFilterChain</filter-name>
+		<url-pattern>/*</url-pattern> 
+	</filter-mapping>
+	
+	
 	<context-param>
 	<param-name>contextConfigLocation</param-name>
 	<param-value>
 		/WEB-INF/donjms.xml
-	</param-value>
-</context-param>
+		/WEB-INF/ev-sec.xml
+	</param-value>	
+	</context-param>
+
+	<!--<filter>
+		<filter-name>Foo</filter-name>
+		<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+		<init-param>
+			<param-name>targetClass</param-name>
+			<param-value>org.springframework.security.util.FilterChainProxy</param-value>
+		</init-param>
+	</filter>
+	
+	<filter-mapping>
+		<filter-name>Foo</filter-name>
+		<url-pattern>/uploadCsv.jsp</url-pattern>
+	</filter-mapping>
+	-->
+
 </web-app>
